Fixed page theme and font flickering and added blur on background

--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -1,3 +1,27 @@
+.bg-decorator {
+  position: fixed;
+  background: #396bf4;
+  opacity: 0.3;
+  filter: blur(200px);
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.bg-decorator--1 {
+  width: 40.63vw;
+  height: 40.63vw;
+  left: -8.54vw;
+  top: -17.36vw;
+}
+
+.bg-decorator--2 {
+  width: 66.67vw;
+  height: 66.67vw;
+  left: 33.33vw;
+  top: 0;
+}
+
 .hero {
   margin-bottom: var(--space-150);
 }
